added JAVA_OPTS parameter to wildfly configuration to get rid of java.lang.OutOfMemoryError: PermGen space